src/components/OrganizationDashCards/CardItem.module.css
.cardItem {
  position: relative;
  display: flex;
  align-items: center;
  background-color: #f1f3f68f;
  border-radius: 8px;
  padding: 15px;
  margin-top: 20px;
}

.cardItem .iconWrapper {
  position: relative;
  height: 52px;
  width: 52px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.cardItem .iconWrapper .themeOverlay {
  background: var(--bs-primary);
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0.12;
  border-radius: 4px;
}

.cardItem .iconWrapper .dangerOverlay {
  background: var(--bs-danger);
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0.12;
  border-radius: 4px;
}

.cardItem .title {
  font-size: 15px;
  font-weight: 600;
  flex: 1;
  margin-right: 0.3rem;
  word-wrap: break-word;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.cardItem .time {
  font-size: 0.8rem;
  font-weight: 300;
  color: #808080;
}

.cardItem .creator {
  font-size: 0.8rem;
  color: black;
}

.rightCard {
  display: flex;
  gap: 5px;
  min-width: 170px;
  justify-content: center;
  flex-direction: column;
}

.content {
  display: flex;
  flex-direction: column;
  max-width: 85%;
}

